--- a/GUI/images.qrc
+++ b/GUI/images.qrc
@@ -6,5 +6,7 @@
         <file>images/gauges/fuel/bg.png</file>
         <file>images/gauges/rpm/bg.png</file>
         <file>images/gauges/rpm/arrow.png</file>
+        <file>images/gauges/speed/arrow.png</file>
+        <file>images/gauges/speed/bg.png</file>
     </qresource>
 </RCC>
