Solved segmentation fault in array monitor management, added exit notification function to serial

--- a/GUI/form.ui
+++ b/GUI/form.ui
@@ -36,6 +36,19 @@
     <string>CheckBox</string>
    </property>
   </widget>
+  <widget class="QScrollBar" name="horizontalScrollBar">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>240</y>
+     <width>160</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
